add logic pessmistic lock with distributed locking with redis
