# golang-gin/api/reservation/swagger.yaml
@@ -79,9 +79,9 @@ paths:
       summary: list airports
       tags:
       - airport
-  /v1/flights/{flight_id}/tickets:
+  /v1/flights/{flight_id}/tickets/optimistic:
     post:
-      description: create a ticket desc
+      description: create a ticket using optimistic lock desc
       parameters:
       - description: Flight ID
         in: path
@@ -97,7 +97,31 @@ paths:
             properties:
               code:
                 type: string
-              items:
+              item:
+                $ref: '#/definitions/controller.ticketDto'
+            type: object
+      summary: create a ticket
+      tags:
+      - ticket
+  /v1/flights/{flight_id}/tickets/pessimistic:
+    post:
+      description: create a ticket using pessimistic lock desc
+      parameters:
+      - description: Flight ID
+        in: path
+        name: flight_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            properties:
+              code:
+                type: string
+              item:
                 $ref: '#/definitions/controller.ticketDto'
             type: object
       summary: create a ticket
